Mode menu order is flipped #62216

Closed
opened 2019-03-05 14:15:36 +01:00 by William Reynish · 4 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: 2.80 beta, Feb 5th 2019
Pretty sure this is a regression from 4dd575e5ab

Short description of error
The main mode menu order is flipped

Exact steps for others to reproduce the error
It's flipped:

Screenshot 2019-03-05 at 14.05.47.png

Even when it opens upwards by flipping the header, it the order is still backwards.

**System Information** Operating system: Graphics card: **Blender Version** Broken: 2.80 beta, Feb 5th 2019 Pretty sure this is a regression from 4dd575e5ab55 **Short description of error** The main mode menu order is flipped **Exact steps for others to reproduce the error** It's flipped: ![Screenshot 2019-03-05 at 14.05.47.png](https://archive.blender.org/developer/F6766062/Screenshot_2019-03-05_at_14.05.47.png) Even when it opens upwards by flipping the header, it the order is still backwards.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

This issue was referenced by 4dd575e5ab

This issue was referenced by 4dd575e5ab55e153f8b745360bed6a9e065ae899

This issue was referenced by cb7e66737d

This issue was referenced by cb7e66737d2d2d0628dda49ddb7d5541915d017b
Brecht Van Lommel self-assigned this 2019-03-05 14:36:06 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62216
No description provided.