Fix T62216: order of items flipped in some menus like object mode.